tests/NormalTests/paczka1/fuzzy1/40445664.err
Error in line 12: MFhBKP3l A80 72,1
Error in line 10: jhpXw2 A80 71,7
Error in line 8: 9fx S61 90,7
Error in line 26: Yu9ULanJ S61 35,1
Error in line 32: fCnDfJdTj2j A80 -1,3
Error in line 33: MFhBKP3l A112 88,4
Error in line 21: fCnDfJdTj2j A80 24,0
